name:                update-ip
version:             0.3.1.0
synopsis:            Updates a dns record on name.com if public ip changed
-- description:         
homepage:            http://github.com/Szczyp/update-ip
license:             GPL-3
author:              Szczyp
maintainer:          qb@szczyp.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.22

executable update-ip
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson
                     , attoparsec
                     , base
                     , case-insensitive
                     , classy-prelude
                     , filepath
                     , lens
                     , lens-aeson
                     , lifted-async
                     , monad-control
                     , mtl
                     , transformers-base
                     , wreq
  -- hs-source-dirs:      
  default-language:    Haskell2010